--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 black_knight/Packages/packages-lock.json
 black_knight/Packages/packages-lock.json
+black_knight/ProjectSettings/ProjectVersion.txt
