--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 black_knight/Packages/packages-lock.json
 black_knight/Packages/packages-lock.json
 black_knight/ProjectSettings/ProjectVersion.txt
+black_knight/ProjectSettings/ProjectVersion.txt
