--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ black_knight/Packages/packages-lock.json
 black_knight/Packages/packages-lock.json
 black_knight/ProjectSettings/ProjectVersion.txt
 black_knight/ProjectSettings/ProjectVersion.txt
+black_knight/Packages/packages-lock.json
