--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 # Versions
 black_knight/ProjectSettings/ProjectVersion.txt
 black_knight/Packages/packages-lock.json
+black_knight/ProjectSettings/ProjectVersion.txt
