--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Versions
-black_knight/ProjectSettings/ProjectVersion.txt
-black_knight/Packages/packages-lock.json
-black_knight/ProjectSettings/ProjectVersion.txt
+ProjectVersion.txt
