Player Idle Jump Run
O Player está crendo santando e ficando parrado, com as respectivas animações

video 2 min 37

--- a/black_knight/.vscode/settings.json
+++ b/black_knight/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "black_knight.sln"
+    "dotnet.defaultSolution": "black_knight.sln",
+    "dotnet.preferCSharpExtension": true
 }
